--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h3>Home Page</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa facilis ad nam provident natus excepturi suscipit doloribus ipsa ab. Nam enim veniam unde quae delectus dicta cumque at! Et quisquam consequatur totam ipsam architecto?
+    </p>
     
 </body>
 </html>
